--- a/index-basic.cabal
+++ b/index-basic.cabal
@@ -15,7 +15,8 @@ cabal-version:       >=1.10
 library
   exposed-modules:
     Control.IMonad.State
-  build-depends:       base       >= 4.6 && < 4.8
-                     , index-core >= 1.0 && < 1.1
+  build-depends:       base         >= 4.6 && < 4.8
+                     , index-core   >= 1.0 && < 1.1
+                     , transformers >= 0.2 && < 0.4
   hs-source-dirs:      src
   default-language:    Haskell2010
